; ModuleID = '/home/carl/AnghaBench/zfs/tests/zfs-tests/cmd/xattrtest/extr_xattrtest.c_post_hook.c'
source_filename = "/home/carl/AnghaBench/zfs/tests/zfs-tests/cmd/xattrtest/extr_xattrtest.c_post_hook.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@script = common dso_local global i8* null, align 8
@synccaches = common dso_local global i64 0, align 8
@dropcaches = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i8*)* @post_hook to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @post_hook(i8* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i8*, align 8
  %4 = alloca [3 x i8*], align 16
  %5 = alloca i32, align 4
  store i8* %0, i8** %3, align 8
  %6 = getelementptr inbounds [3 x i8*], [3 x i8*]* %4, i64 0, i64 0
  %7 = load i8*, i8** @script, align 8
  store i8* %7, i8** %6, align 8
  %8 = getelementptr inbounds i8*, i8** %6, i64 1
  %9 = load i8*, i8** %3, align 8
  store i8* %9, i8** %8, align 8
  %10 = getelementptr inbounds i8*, i8** %8, i64 1
  store i8* null, i8** %10, align 8
  %11 = load i64, i64* @synccaches, align 8
  %12 = icmp ne i64 %11, 0
  br i1 %12, label %13, label %15

13:                                               ; preds = %1
  %14 = call i32 (...) @sync()
  br label %15

15:                                               ; preds = %13, %1
  %16 = load i64, i64* @dropcaches, align 8
  %17 = icmp ne i64 %16, 0
  br i1 %17, label %18, label %25

18:                                               ; preds = %15
  %19 = call i32 (...) @drop_caches()
  store i32 %19, i32* %5, align 4
  %20 = load i32, i32* %5, align 4
  %21 = icmp ne i32 %20, 0
  br i1 %21, label %22, label %24

22:                                               ; preds = %18
  %23 = load i32, i32* %5, align 4
  store i32 %23, i32* %2, align 4
  br label %34

24:                                               ; preds = %18
  br label %25

25:                                               ; preds = %24, %15
  %26 = load i8*, i8** @script, align 8
  %27 = getelementptr inbounds [3 x i8*], [3 x i8*]* %4, i64 0, i64 0
  %28 = call i32 @run_process(i8* %26, i8** %27)
  store i32 %28, i32* %5, align 4
  %29 = load i32, i32* %5, align 4
  %30 = icmp ne i32 %29, 0
  br i1 %30, label %31, label %33

31:                                               ; preds = %25
  %32 = load i32, i32* %5, align 4
  store i32 %32, i32* %2, align 4
  br label %34

33:                                               ; preds = %25
  store i32 0, i32* %2, align 4
  br label %34

34:                                               ; preds = %33, %31, %22
  %35 = load i32, i32* %2, align 4
  ret i32 %35
}

declare dso_local i32 @sync(...) #1

declare dso_local i32 @drop_caches(...) #1

declare dso_local i32 @run_process(i8*, i8**) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
